==================== 2.19.5 ====================

2007-07-08  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: dist the glade file

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (display_about_dialog): use program-name instead of name
	property for GtkAboutDialog.
	Fix bug #438903.
	* tz.c: remove useless include

2007-07-06  Vincent Untz  <vuntz@gnome.org>

	* clock-utils.c: include config.h
	Fix bug #454299 (12-hour setting not working anymore)
	* clock.c: remove useless include
	* timezone.glade: add a shadow for the map

2007-07-05  Vincent Untz  <vuntz@gnome.org>

	Add support for timezones. This needs some more work and testing on
	various OS. I'm not sure the tz.c part work well outside of Linux, eg.
	Fix bug #88754.

	* Makefile.am: add new files, and other updates needed for this commit
	* calendar-window.c: make gconf keys #define
	(calendar_window_destroy): unref the gconf client
	* calendar-window.h: small update
	* clock-utils.[ch]: new file, containing some common code:
	clock_locale_format() and clock_utils_display_help()
	* clock.h: small update
	* clock.c: make gconf keys #define
	(set_tooltip): kill
	(update_clock): update the tz popup too with the new time
	(update_tooltip): use gtk_widget_set_tooltip_text()
	(destroy_clock): updated
	(close_on_escape): make a bit more generic
	(delete_event): ditto
	(clock_locale_format): moved to clock-utils.c
	(create_calendar): updated
	(create_tz): new
	(position_calendar_popup): updated to be a bit more simple
	(position_tz_popup): new
	(present_calendar_popup): killed
	(update_calendar_popup): renamed from update_popup, close the tz popup
	if it's open
	(update_tz_popup): new, based on update_calendar_popup()
	(toggle_calendar): updated
	(toggle_timezone): new
	(toggle_timezone_shown): new
	(toggle_timezone_hidden): new
	(create_clock_widget): updated, and added the obox and the tz toggle
	(applet_change_orient): change obox orientation and the direction of
	the arrow in the tz toggle