@@ -1,3 +1,10 @@
+2007-07-11  Vincent Untz  <vuntz@gnome.org>
+
+	* e-map/e-map.c: (e_map_realize), (e_map_size_allocate),
+	(e_map_remove_point), (update_and_paint), (load_map_background),
+	(update_render_pixbuf), (zoom_in_smooth), (zoom_in), (zoom_out):
+	sync with gnome-system-tools
+
 ==================== 2.19.5 ====================
 
 2007-07-08  Vincent Untz  <vuntz@gnome.org>
